# fastapi-microshop

./: .gitignore  README.md  pyproject.toml
microshop/: alembic.ini  app_lifespan.py  crud.py  items_views.py  main.py
microshop/alembic/: env.py
microshop/alembic/versions/: 2025_09_22_1058-1856fa0eb991_create_products_table.py  2025_09_22_1112-dc38f1fd961e_create_users_table.py  2025_09_22_1125-0e1e644b53bc_create_posts_table.py  2025_09_23_0843-038c21e40ee6_create_profile_table.py  2025_09_27_1232-40a98acd28af_create_orders_table.py  2025_09_27_1329-64725b650349_create_order_product_association_table.py  2025_09_28_2021-84948a7bc5ac_add_quantity_column_to_order_product_.py  2025_09_29_1419-fe2ac3235f93_add_unit_price_column_to_order_product_.py
microshop/api_v1/: __init__.py
microshop/api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
microshop/api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
microshop/api_v1/products/views/: __init__.py  details_views.py  list_views.py
microshop/api_v1/users/: crud.py  schemas.py  views.py
microshop/auth/: README.md  utils_jwt.py
microshop/core/: config.py
microshop/core/models/: __init__.py  base.py  db_helper.py
microshop/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
microshop/schemas/: product_schema.py  user_schema.py
microshop/users/: crud.py  views.py
