[project]
name = "fastapi-microshop"
version = "0.1.0"
description = "FastAPI Microshop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings[yaml]>=2.10.1",
    "pyjwt[crypto]>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.43",
]
